# wlib

./: .gitmodules  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat  clean_linux.sh  clean_windows.bat
.github/workflows/: build.yml
include/: codec.h  xorstr.h
lib/shared/debug/: wlibd.ilk
lib/static/debug/: wlibd.lib
lib/static/release/: wlib.lib
src/: codec.cpp
src/example/codec/: codec.cpp
src/example/file/: file.cpp
src/example/xorstr/: CMakeLists.txt  xorstr.cpp
